k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: introcom-service
  namespace: default
spec:
  selector:
    app: introcom
    app.kubernetes.io/name: introcom
  ports:
    - protocol: TCP
      port: 8000
      appProtocol: http
      targetPort: 8000
